--- a/_includes/elements/page-banner.html
+++ b/_includes/elements/page-banner.html
@@ -15,7 +15,13 @@
 
 <div class="page-banner2 page-banner leader-banner image-gradient parallax-image image-to-top">
     <div class="full-width-image">
-        <img src="https://www.army.mil/e2/images/rv7/leaders/masthead/sa/1600.jpg" srcset="https://www.army.mil/e2/images/rv7/leaders/masthead/sa/1600.jpg 1600w, https://www.army.mil/e2/images/rv7/leaders/masthead/sa/1200.jpg 1200w, https://www.army.mil/e2/images/rv7/leaders/masthead/sa/992.jpg 992w, https://www.army.mil/e2/images/rv7/leaders/masthead/sa/768.jpg 768w, https://www.army.mil/e2/images/rv7/leaders/masthead/sa/480.jpg 480w">
+        <img src="https://www.army.mil/e2/images/rv7/leaders/masthead/sa/1600.jpg"
+             srcset="https://www.army.mil/e2/images/rv7/leaders/masthead/sa/2500.jpg 2500w,
+                     https://www.army.mil/e2/images/rv7/leaders/masthead/sa/1600.jpg 1600w,
+                     https://www.army.mil/e2/images/rv7/leaders/masthead/sa/1200.jpg 1200w,
+                     https://www.army.mil/e2/images/rv7/leaders/masthead/sa/992.jpg 992w,
+                     https://www.army.mil/e2/images/rv7/leaders/masthead/sa/768.jpg 480w"
+        />
     </div>
     <div class="container">
         <div class="inner-container">
@@ -53,12 +59,12 @@
     </div>
 </div>
 
-<div class="page-banner3 page-banner with-logo">
+<div class="page-banner3 page-banner org-banner">
     <div class="container">
-        <div class="logo">
-            <img alt="logo alt" src="https://www.army.mil/e2/images/rv7/org/logos/101stairborne.png">
-        </div>
         <div class="inner-container">
+            <div class="logo">
+                <img alt="logo alt" src="https://www.army.mil/e2/images/rv7/org/logos/101stairborne.png">
+            </div>
             <div class="left-container">
                 <h1>Page Banners</h1>
                 <div class="max-width-container">
