--- a/css/banners.scss
+++ b/css/banners.scss
@@ -48,7 +48,7 @@ section {
         h2 {
           color: map-get($army-branding, gold);
           margin-bottom: 15px;
-          text-shadow: 1px 1px 3px map-get($army-branding, armyblack);
+          text-shadow: 0 0 6px map-get($army-branding, armyblack);
         }
 
         ul.social-links {
