add news-list element into global

--- a/_scss/_all.scss
+++ b/_scss/_all.scss
@@ -25,6 +25,7 @@
 @import "elements/masthead";
 @import "elements/nav";
 @import "elements/news";
+@import "elements/news-list";
 @import "elements/notifications";
 @import "elements/page-banner";
 @import "elements/parallax-image";
