--- a/_includes/elements.html
+++ b/_includes/elements.html
@@ -59,6 +59,14 @@
     <div class="container no-bottom">
         <div class="inner-container">
             <div class="elem">
+                <h4>NEWS LIST</h4>
+                {% include elements/news-list.html %}
+            </div>
+        </div>
+    </div>
+    <div class="container no-bottom">
+        <div class="inner-container">
+            <div class="elem">
                 <h4>TRANSCRIPTS/PRESS RELEASES</h4>
                 {% include elements/headlines.html %}
             </div>
