--- a/_scss/_all.scss
+++ b/_scss/_all.scss
@@ -33,4 +33,5 @@
 @import "elements/playlist";
 @import "elements/quotes";
 @import "elements/social";
+@import "elements/top-button";
 @import "elements/two-column-body";
