created top btn include file

--- a/_includes/elements.html
+++ b/_includes/elements.html
@@ -103,5 +103,5 @@
     {% include elements/quotes.html %}
 </section>
 
-<a href="#" class="top-btn">back to top<span></span></a>
+{% include elements/top-btn.html %}
 
