--- a/_includes/elements/news-list.html
+++ b/_includes/elements/news-list.html
@@ -9,10 +9,14 @@
             <div class="news-right">
                 <div class="main-content">
                     <p class="date">August 16, 2016</p>
-                    <ul>
+                    <p class="sections">
+                        <a href="#">Army Reserve</a>
+                        <a href="#">Europe</a>
+                    </p>
+                    <!-- <ul>
                         <li><a href="#">Army Reserve</a></li>
                         <li><a href="#">Europe</a></li>
-                    </ul>
+                    </ul> -->
                     <p class="title"><a title="US Soldiers join allies for Polish Armed Forces Day" href="/article/173414/us_soldiers_join_allies_for_polish_armed_forces_day" class="title">US Soldiers join allies for Polish Armed Forces Day</a></p>
                 </div>
                 <p class="more"><a title="US Soldiers join allies for Polish Armed Forces Day" href="/article/173414/us_soldiers_join_allies_for_polish_armed_forces_day" class="bottom">READ MORE<span class="view-more-arrow-sm"></span></a></p>
@@ -29,11 +33,16 @@
             <div class="news-right">
                 <div class="main-content">
                     <p class="date">August 15, 2016</p>
-                    <ul>
+                    <p class="sections">
+                        <a href="#">Asia and Pacific</a>
+                        <a href="#">Army Homepage</a>
+                        <a href="#">Army News Service</a>
+                    </p>
+                    <!-- <ul>
                         <li><a href="#">Asia and Pacific</a></li>
                         <li><a href="#">Army Homepage</a></li>
                         <li><a href="#">Army News Service</a></li>
-                    </ul>
+                    </ul> -->
                     <p class="title"><a title="Army Chief of Staff visits China, South Korea, Japan, Hawaii" href="/article/173330/army_chief_of_staff_visits_china_south_korea_japan_hawaii">Army Chief of Staff visits China, South Korea, Japan, Hawaii</a></p>
                 </div>
                 <p class="more"><a title="Army Chief of Staff visits China, South Korea, Japan, Hawaii" href="/article/173330/army_chief_of_staff_visits_china_south_korea_japan_hawaii">READ MORE<span class="view-more-arrow-sm"></span></a></p>
