--- a/_scss/elements/_page-banner.scss
+++ b/_scss/elements/_page-banner.scss
@@ -78,7 +78,6 @@
         .left-container {
           display: table-cell;
           height: 175px;
-          text-align: left;
           vertical-align: middle;
         }
 
@@ -86,11 +85,8 @@
         h2 { font-size: 1.25em; }
 
         h1,
-        h2 { text-align: left; }
-
-        ul.social-links {
-          li.social-button:first-child a { padding: 5px 10px 5px 0; }
-        }
+        h2,
+        .left-container { text-align: left; }
       }
     }
 
@@ -203,40 +199,34 @@
     .container .inner-container {
       h1 {
         @include header-underline(gold);
-        text-align: center;
-        font-size: 1.5em;
-        font-weight: 700;
-        line-height: 1.5em;
-        margin: 0 0 25px;
+        font: 700 1.313em/1.4 $font-family;
+        margin: 0 0 20px;
+
         &::after {
           height: 4px;
-          margin: 20px auto 0;
+          margin: 15px auto 0;
         }
       }
-      h2 {
-        font-size: 2.5em;
-        font-weight: 700;
-        line-height: 1.125em;
-        text-align: center;
-        text-shadow: none;
-      }
-      @include breakpoints(tablet lg_tablet sm_desktop) {
-        h2 {
-          font-size: 2.25em;
-        }
-      }
-      @include breakpoints(mobile nav) {
+
+      h2 { font: 700 1.875em/1.125 $font-family; }
+
+      // standard headers always centered
+      h1,
+      h2 { text-align: center; }
+
+      @media (min-width: 700px) {
         h1 {
-          font-size: 1.313em;
-          line-height: 1.4em;
-          margin: 0 0 20px;
-          &::after {
-            margin: 15px auto 0;
-          }
+          font: 700 1.5em/1.5 $font-family;
+          margin: 0 0 25px;
+
+          &::after { margin: 20px auto 0; }
         }
-        h2 {
-          font-size: 1.875em;
-        }
+
+        h2 { font-size: 2.25em; }
+      }
+
+      @media (min-width: 1156px) {
+        h2 { font-size: 2.5em; }
       }
     }
   }
