remove unnecessary class from markup

--- a/_includes/elements/news-list.html
+++ b/_includes/elements/news-list.html
@@ -2,7 +2,7 @@
     <div class="news-item">
         <div class="news-inner">
             <div class="image-wrap">
-                <a title="US Soldiers join allies for Polish Armed Forces Day" href="/article/173414/us_soldiers_join_allies_for_polish_armed_forces_day" class="image">
+                <a title="US Soldiers join allies for Polish Armed Forces Day" href="/article/173414/us_soldiers_join_allies_for_polish_armed_forces_day">
                     <img alt="US Soldiers join allies for Polish Armed Forces Day" src="https://www.army.mil/e2/c/images/2016/08/16/447115/size2.jpg">
                 </a>
             </div>
