--- a/_includes/elements/news-list.html
+++ b/_includes/elements/news-list.html
@@ -13,20 +13,16 @@
                         <a href="#">Army Reserve</a>
                         <a href="#">Europe</a>
                     </p>
-                    <!-- <ul>
-                        <li><a href="#">Army Reserve</a></li>
-                        <li><a href="#">Europe</a></li>
-                    </ul> -->
-                    <p class="title"><a title="US Soldiers join allies for Polish Armed Forces Day" href="/article/173414/us_soldiers_join_allies_for_polish_armed_forces_day" class="title">US Soldiers join allies for Polish Armed Forces Day</a></p>
+                    <p class="title"><a title="US Soldiers join allies for Polish Armed Forces Day" href="/article/173414/us_soldiers_join_allies_for_polish_armed_forces_day">US Soldiers join allies for Polish Armed Forces Day</a></p>
                 </div>
-                <p class="more"><a title="US Soldiers join allies for Polish Armed Forces Day" href="/article/173414/us_soldiers_join_allies_for_polish_armed_forces_day" class="bottom">READ MORE<span class="view-more-arrow-sm"></span></a></p>
+                <p class="more"><a title="US Soldiers join allies for Polish Armed Forces Day" href="/article/173414/us_soldiers_join_allies_for_polish_armed_forces_day">READ MORE<span class="view-more-arrow-sm"></span></a></p>
             </div>
         </div>
     </div>
     <div class="news-item">
         <div class="news-inner">
             <div class="image-wrap">
-                <a title="Army Chief of Staff visits China, South Korea, Japan, Hawaii" href="/article/173330/army_chief_of_staff_visits_china_south_korea_japan_hawaii" class="image">
+                <a title="Army Chief of Staff visits China, South Korea, Japan, Hawaii" href="/article/173330/army_chief_of_staff_visits_china_south_korea_japan_hawaii">
                     <img alt="Army Chief of Staff visits China, South Korea, Japan, Hawaii" src="https://www.army.mil/e2/c/images/2016/08/14/446902/size2.jpg">
                 </a>
             </div>
@@ -38,11 +34,6 @@
                         <a href="#">Army Homepage</a>
                         <a href="#">Army News Service</a>
                     </p>
-                    <!-- <ul>
-                        <li><a href="#">Asia and Pacific</a></li>
-                        <li><a href="#">Army Homepage</a></li>
-                        <li><a href="#">Army News Service</a></li>
-                    </ul> -->
                     <p class="title"><a title="Army Chief of Staff visits China, South Korea, Japan, Hawaii" href="/article/173330/army_chief_of_staff_visits_china_south_korea_japan_hawaii">Army Chief of Staff visits China, South Korea, Japan, Hawaii</a></p>
                 </div>
                 <p class="more"><a title="Army Chief of Staff visits China, South Korea, Japan, Hawaii" href="/article/173330/army_chief_of_staff_visits_china_south_korea_japan_hawaii">READ MORE<span class="view-more-arrow-sm"></span></a></p>
