add another feature banner for testing

--- a/_includes/elements/page-banner.html
+++ b/_includes/elements/page-banner.html
@@ -113,6 +113,21 @@
     </div>
 </div>
 
+<div class="page-banner5 page-banner parallax-image standard">
+    <div class="full-width-image">
+        <div class="overlay-effect"></div>
+        <img src="/e2/images/rv7/banner-graphics/2/1600.jpg" srcset="/e2/images/rv7/banner-graphics/2/2500.jpg 2500w, /e2/images/rv7/banner-graphics/2/1600.jpg 1600w, /e2/images/rv7/banner-graphics/2/768.jpg 768w, /e2/images/rv7/banner-graphics/2/480.jpg 480w">
+    </div>
+    <div class="container">
+        <div class="inner-container">
+            <div class="left-container">
+                <h1>Army 101</h1>
+                <h2>The Army At A Glance: <br>Culture, Profession &amp; Programs</h2>
+            </div>
+        </div>
+    </div>
+</div>
+
 <nav>
     <input type="checkbox" id="subnav-toggle">
     <div class="subnav-container">
@@ -123,6 +138,7 @@
                 <li><a href="#page-banner2">Leaders</a></li>
                 <li><a href="#page-banner3">Org Pages</a></li>
                 <li><a href="#page-banner4">Features</a></li>
+                <li><a href="#page-banner5">Features 2</a></li>
             </ul>
         </div>
     </div>
