--- a/_scss/elements/_news-list.scss
+++ b/_scss/elements/_news-list.scss
@@ -11,31 +11,47 @@
     }
 
     .image-wrap {
-      height: 100%;
+      background-color: map-get($army-branding, black);
+      height: 0;
       overflow: hidden;
+      padding-top: 21.35%;
       position: absolute;
       width: 33%;
 
+
       a {
+        // gold bar
         &:after {
-          background: map-get($army-branding, gold);
+          background-color: map-get($army-branding, gold);
           content: '';
           height: 4px;
           left: 0;
           position: absolute;
           top: 0;
           width: 100%;
+          z-index: 2;
           @include transform(translateX, -100%);
-
           @include custom-transition(transform .25s ease);
+        }
+        // dark overlay on hover
+        &:before {
+          background-color: map-get($army-branding, black);
+          content: '';
+          height: 100%;
+          left: 0;
+          position: absolute;
+          top: 0;
+          width: 100%;
+          z-index: 1;
+          @include opacity(0);
+          @include custom-transition(opacity 0.25s ease 0s);
         }
 
         img {
-          // bottom: -2000px;
-          // margin: auto;
-          // position: absolute;
-          // top: -2000px;
-          @include custom-transition(-webkit-filter 0.25s ease 0s, filter 0.25s ease 0s);
+          bottom: -2000px;
+          margin: auto 0;
+          position: absolute;
+          top: -2000px;
           width: 100%;
         }
 
@@ -44,8 +60,11 @@
           &:after {
             @include transform(translateX, 0);
           }
+          &:before {
+            @include opacity(0.25);
+          }
           img {
-            @include custom-filter(grayscale(75%) brightness(70%));
+            @include custom-filter(grayscale(75%));
           }
         }
       }
@@ -143,7 +162,7 @@
 
     @include breakpoints(lg_tablet) {
       .image-wrap ~ .news-right .main-content {
-        min-height: 140px;
+        min-height: 135px;
       }
 
       .news-right {
@@ -152,7 +171,7 @@
     }
     @include breakpoints(tablet) {
       .image-wrap ~ .news-right .main-content {
-        min-height: 125px;
+        min-height: 120px;
       }
       .news-right {
         font-size: .875em;
