changed link to photos

--- a/_includes/elements/header.html
+++ b/_includes/elements/header.html
@@ -36,7 +36,7 @@
                   <li>
                       <a href="javascript:;" class="menu-item">MEDIA<span></span></a>
                       <ul>
-                        <li><a href="//www.army.mil/photos/">Photos</a></li>
+                        <li><a href="/photos">Photos</a></li>
                         <li><a href="https://www.youtube.com/user/usarmynews">Videos</a></li>
                         <li><a href="//www.army.mil/media/publications/">Publication</a></li>
                       </ul>
