--- a/_scss/base/mixins/_img-grayscale-hover.scss
+++ b/_scss/base/mixins/_img-grayscale-hover.scss
@@ -4,24 +4,39 @@
 
 // ----------------------------------------------------------------------
 
-// example: img-grayscale-hover($parent: 'a');
+// example: img-grayscale-hover('a', '.image');
 
-@mixin img-grayscale-hover($parent: 'a') {
+@mixin img-grayscale-hover($parent: 'a', $img-cont: '&') {
   img {
     bottom: -2000px;
     margin: auto;
     position: absolute;
     top: -2000px;
     width: 100%;
-    
-    @include custom-transition(filter 0.25s ease, opacity 0.25s ease);
   }
   
   @include breakpoints(lg_tablet sm_desktop desktop large really_big) {
+    #{$parent} {
+      #{$img-cont}:before {
+        background-color: map-get($army-branding, black);
+        content: '';
+        height: 100%;
+        left: 0;
+        position: absolute;
+        top: 0;
+        width: 100%;
+        z-index: 1;
+        @include opacity(0);
+        @include custom-transition(opacity 0.25s ease 0s);
+      }
+    }
     #{$parent}:focus,
     #{$parent}:hover {
+      #{$img-cont}:before {
+        @include opacity(0.25);
+      }
       img {
-        @include grayscale();
+        @include custom-filter(grayscale(75%));
       }
     }
   }
