--- a/_scss/elements/_news-list.scss
+++ b/_scss/elements/_news-list.scss
@@ -33,41 +33,15 @@
           @include transform(translateX, -100%);
           @include custom-transition(transform .25s ease);
         }
-        // dark overlay on hover
-        &:before {
-          background-color: map-get($army-branding, black);
-          content: '';
-          height: 100%;
-          left: 0;
-          position: absolute;
-          top: 0;
-          width: 100%;
-          z-index: 1;
-          @include opacity(0);
-          @include custom-transition(opacity 0.25s ease 0s);
-        }
-
-        img {
-          bottom: -2000px;
-          margin: auto 0;
-          position: absolute;
-          top: -2000px;
-          width: 100%;
-        }
 
         &:focus,
         &:hover {
           &:after {
             @include transform(translateX, 0);
           }
-          &:before {
-            @include opacity(0.25);
-          }
-          img {
-            @include custom-filter(grayscale(75%));
-          }
         }
       }
+      @include img-grayscale-hover();
     }
 
     .image-wrap + .news-right {
