--- a/_scss/elements/_news.scss
+++ b/_scss/elements/_news.scss
@@ -24,6 +24,7 @@
           position: absolute;
           top: 0;
           width: 100%;
+          z-index: 2;
           @include transform(translateX, -100%);
 
           @include custom-transition(transform .25s ease);
@@ -39,11 +40,11 @@
         }
       }
 
-      @include img-grayscale-hover('a');
+      @include img-grayscale-hover('a', '.image');
 
       .image {
-        @include row();
         background: map-get($army-branding, black);
+        display: block;
         height: 0;
         padding: 66.25% 0 0;
         position: relative;
