--- a/_includes/elements/page-banner.html
+++ b/_includes/elements/page-banner.html
@@ -1,7 +1,7 @@
-<div class="page-banner1 page-banner news-wide standard parallax-image">
+<div class="page-banner1 page-banner standard parallax-image">
     <div class="full-width-image">
         <div class="overlay-effect"></div>
-        <img src="https://www.army.mil/e2/images/rv7/global-news/mastheads/1600.jpg" srcset="https://www.army.mil/e2/images/rv7/global-news/mastheads/1600.jpg 1600w, https://www.army.mil/e2/images/rv7/global-news/mastheads/1200.jpg 1200w, https://www.army.mil/e2/images/rv7/global-news/mastheads/992.jpg 992w, https://www.army.mil/e2/images/rv7/global-news/mastheads/768.jpg 768w, https://www.army.mil/e2/images/rv7/global-news/mastheads/480.jpg 480w">
+        <img src="https://www.army.mil/e2/images/rv7/banners/army_worldwide/1600.jpg" srcset="https://www.army.mil/e2/images/rv7/banners/army_worldwide/2500.jpg 2500w, https://www.army.mil/e2/images/rv7/banners/army_worldwide/1600.jpg 1600w, https://www.army.mil/e2/images/rv7/banners/army_worldwide/768.jpg 768w">
     </div>
     <div class="container">
         <div class="inner-container">
@@ -122,7 +122,7 @@
         <div class="inner-container">
             <div class="left-container">
                 <h1>Army 101</h1>
-                <h2>The Army At A Glance: <br>Culture, Profession &amp; Programs</h2>
+                <h2>Explore Army Culture, <br>Professions and Programs</h2>
             </div>
         </div>
     </div>
@@ -137,7 +137,7 @@
         <div class="inner-container">
             <div class="left-container">
                 <h1>Army 101</h1>
-                <h2>The Army At A Glance: <br>Culture, Profession &amp; Programs</h2>
+                <h2>Explore Army Culture, <br>Professions and Programs</h2>
             </div>
         </div>
     </div>
